--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "0.9.3",
     "semantic-ui-css": "^2.2.9",
-    "semantic-ui-react": "^0.67.0"
+    "semantic-ui-react": "^0.67.0",
+    "mime": ">=1.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
