--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "mime": ">=1.4.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "0.9.3",
     "semantic-ui-css": "^2.2.9",
-    "semantic-ui-react": "^0.67.0",
-    "mime": ">=1.4.1"
+    "semantic-ui-react": "^0.67.0"
   },
   "scripts": {
     "start": "react-scripts start",
