--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.1.3",
     "mime": ">=1.4.1",
     "react": "^15.4.2",
+    "react-calendar": "^2.17.4",
     "react-dom": "^15.4.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
