--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:3001",
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
     "mime": ">=1.4.1",
     "react": "^15.4.2",
     "react-calendar": "^2.17.4",
