--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,11 @@
   "proxy": "http://localhost:3001",
   "dependencies": {
     "axios": "^0.18.0",
+    "base-64": "^0.1.0",
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
     "mime": ">=1.4.1",
+    "popper.js": "^1.14.4",
     "react": "^15.4.2",
     "react-calendar": "^2.17.4",
     "react-confirm-alert": "^2.0.6",
@@ -16,7 +18,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "0.9.3",
     "semantic-ui-css": "^2.2.9",
-    "semantic-ui-react": "^0.67.0"
+    "semantic-ui-react": "^0.67.0",
+    "utf8": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
