--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "base-64": "^0.1.0",
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
+    "merge": ">=1.2.1",
     "mime": ">=1.4.1",
     "popper.js": "^1.14.4",
     "react": "^15.4.2",
