--- a/emr/package.json
+++ b/emr/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
+    "merge": ">=1.2.1",
     "mime": ">=1.4.1",
     "react": "^15.4.2",
     "react-calendar": "^2.17.4",
