--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,11 @@
     "react-calendar": "^2.17.4",
     "react-confirm-alert": "^2.0.6",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.1.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "0.9.3",
+    "redux": "^4.0.1",
     "semantic-ui-css": "^2.2.9",
     "semantic-ui-react": "^0.67.0",
     "utf8": "^3.0.0"
@@ -27,5 +29,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "redux-devtools": "^3.4.1"
   }
 }
